# Stroygetter-Native

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.github/: release-body-template.md
.github/workflows/: bump.yml  check.yml  release.yml
docs/: ai-context.md  stroygetter-releases.asc
docs/superpowers/plans/: 2026-06-26-scaffold-tauri-v2.md  2026-06-29-analytics-error-reporting.md  2026-06-29-metadata-editor.md  2026-06-29-security-correctness-fixes.md
docs/superpowers/specs/: 2026-06-26-scaffold-tauri-v2-design.md  2026-06-29-analytics-error-reporting-design.md  2026-06-29-metadata-editor-design.md
src/: App.tsx  globals.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  pot.rs  sidecar.rs
src-tauri/src/commands/: download.rs  info.rs  library_ready.rs  metadata_editor.rs  mod.rs  settings.rs
src/components/custom/: BottomNav.tsx  GetterInput.tsx  Sidebar.tsx  VideoLoading.tsx  VideoSelect.tsx
src/components/ui/: textarea.tsx
src/lib/: analytics.ts  commands.ts  i18n.ts  logger.ts  metadata.ts  settings.ts  types.ts  updater.ts
src/lib/__tests__/: analytics.test.ts  i18n.test.ts  metadata.test.ts  settings.test.ts  updater.test.ts
src/locales/: en.json  es-419.json  fr-FR.json  pt-BR.json
src/views/: Fetch.tsx  Home.tsx  MetadataEditor.tsx  Settings.tsx  Updates.tsx
