[package]
name = "stroygetter-native"
version = "1.0.0-beta.1"
edition = "2021"

[lib]
name = "stroygetter_native_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
id3 = "1"
base64 = "0.22"
sentry = { version = "0.34", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }
tauri-plugin-log = "2"
log = "0.4"
tauri-plugin-opener = "2.5.4"
url = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
